# recommender-system-and-deep-learning

./: .gitignore  pyproject.toml
collaborative_filtering/: itembased.py  preprocess2dict.py  preprocess_shrink.py  userbased.py
matrix_factorization/: autorec.py  mf.py  mf2.py  mf_keras.py  mf_keras_deep.py  mf_keras_res.py  mf_test.py  preprocess2sparse.py  spark.py  spark2.py
user_user_cf/: preprocess.py  preprocess_shrink.py  userbased.py
