[tool.poetry]
name = "recsys-deep-learning"
version = "0.1.0"
description = ""
authors = ["zoohta <koh.0430.ta@gmail.com>"]
readme = "README.md"
packages = [{include = "recsys_deep_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
