[tool.poetry]
name = "recsys-deep-learning"
version = "0.1.0"
description = ""
authors = ["zoohta <koh.0430.ta@gmail.com>"]
readme = "README.md"
packages = [{include = "recsys_deep_learning"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
tqdm = "^4.64.1"
sortedcontainers = "^2.4.0"
matplotlib = "^3.6.3"
keras = "^2.11.0"
setuptools = "^67.3.2"
tensorflow-macos = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
